--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -23,25 +23,26 @@
         <dependency> <!-- Spigot (this includes Spigot API, Bukkit API, Craftbukkit and NMS) -->
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.12-R0.1-SNAPSHOT</version>
+            <version>${minecraft.version}-${bukkit.version}-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.12-R0.1-SNAPSHOT</version>
+            <version>${minecraft.version}-${bukkit.version}-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
-            <version>1.6.6</version>
+            <version>LATEST</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.black_ixx</groupId>
             <artifactId>PlayerPoints</artifactId>
-            <version>2.1.3</version>
+            <version>LATEST</version>
         </dependency>
     </dependencies>
     <build>
