Rewrite JSON text handling and Material handling Add api-version 1.13

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: boosCooldowns
 main: cz.boosik.boosCooldown.BoosCoolDown
-version: 3.16.1
+version: 3.16.2
+api-version: 1.13
 authors: [LordBoos (boosik)]
 softdepend: [Vault, PlayerPoints]
 description: >
