--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -22,13 +22,13 @@
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
-            <version>LATEST</version>
+            <version>1.7.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.black_ixx</groupId>
             <artifactId>PlayerPoints</artifactId>
-            <version>LATEST</version>
+            <version>2.1.3</version>
         </dependency>
     </dependencies>
     <build>
