--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -21,14 +21,14 @@
         </dependency>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
-            <artifactId>Vault</artifactId>
-            <version>1.7.3</version>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.7</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.black_ixx</groupId>
-            <artifactId>PlayerPoints</artifactId>
-            <version>3.3.3-SNAPSHOT</version>
+            <artifactId>playerpoints</artifactId>
+            <version>3.3.2</version>
         </dependency>
     </dependencies>
     <build>
