--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,11 @@
     <repositories>
         <repository>
             <id>rosewood-repo</id>
-            <url>https://repo.rosewooddev.io/repository/public/</url>
+            <url>https://repo.rosewooddev.io/repository/public</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
         <repository>
             <id>vault-repo</id>
