--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -27,7 +27,7 @@
         </dependency>
         <dependency>
             <groupId>org.black_ixx</groupId>
-            <artifactId>PlayerPoints</artifactId>
+            <artifactId>playerpoints</artifactId>
             <version>3.3.2</version>
         </dependency>
     </dependencies>
